Fixed QUnit tests, added line height spacing for skill hints

--- a/src/ui/gui.css
+++ b/src/ui/gui.css
@@ -324,6 +324,7 @@ select.center {
 
 span.skill_title {
     font-weight: bold;
+    line-height: 1.5;
 }
 
 span.skill_desc {
